# rust-atelier

./: .gitignore  .gitpod.yml  CNAME  CNAME_not_yet  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  atelier.css  atelier.js  index.html  print.html  pull_request_template.md  searchindex.js  searchindex.json  smithy.js  turtle.js
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  specification-behavior.md
.github/workflows/: cargo-audit.yml  gh-pages.yml  rust.yml
atelier-assembler/: Cargo.toml  README.md
atelier-assembler/src/: lib.rs
atelier-assembler/tests/: assemble_enterprise.rs  assemble_nothing.rs  assemble_resolver_cases.rs
atelier-assembler/tests/good/: base.smithy  identity.smithy  product.smithy
atelier-assembler/tests/resolver_cases/: animal.smithy  animals.lines  dog-breeds.smithy  dog-colors.smithy  dog.smithy
atelier-core/: Cargo.toml  README.md
atelier-core/examples/: motd_builder.rs  motd_core.rs  weather.rs  weather_builder.rs
atelier-core/prelude/: README.md
atelier-core/src/: error.rs  lib.rs  macros.rs  prelude.rs  registry.rs  select.pest  syntax.rs
atelier-core/src/action/: mod.rs
atelier-core/src/action/lint/: mod.rs  terms.rs
atelier-core/src/action/transform/: mod.rs
atelier-core/src/action/validate/: mod.rs
atelier-core/src/builder/: id.rs  mod.rs  prelude.rs  selector.rs  shapes.rs  traits.rs  values.rs
atelier-core/src/io/: debug.rs  lines.rs  mod.rs  plant_uml.rs
atelier-core/src/model/: identity.rs  mod.rs  select.rs  statements.rs  values.rs  visitor.rs
atelier-core/src/model/builder/: mod.rs  shapes.rs  traits.rs  values.rs
atelier-core/src/model/selector/: evaluate.rs  mod.rs
atelier-core/src/model/shapes/: aggregate.rs  members.rs  mod.rs  service.rs  services.rs  simple.rs  types.rs
atelier-core/src/select/: mod.rs
atelier-core/tests/: core_id_resolver.rs  core_identity_types.rs  core_line_writer.rs  core_linters.rs  core_merge_metadata.rs  core_merge_shapes.rs  core_merge_traits.rs  core_merge_unresolved.rs  core_resolver.rs  core_selector.rs  core_shape_operation.rs  core_shapes.rs  core_uml_writer.rs  core_validators.rs  core_visitor.rs
atelier-core/tests/common/: mod.rs
atelier-describe/: Cargo.toml  README.md
atelier-describe/src/: lib.rs
atelier-describe/src/document/: mod.rs  writer.rs
atelier-describe/src/graphml/: mod.rs  writer.rs
atelier-describe/src/plant_uml/: mod.rs  writer.rs
atelier-describe/tests/: describe_graphml_writer.rs  describe_markdown_writer.rs  describe_parts.rs  describe_uml_writer.rs  doc_writer.rs
atelier-describe/tests/common/: mod.rs
atelier-json/: Cargo.toml  README.md
atelier-json/examples/: json_weather.rs  write_weather.rs
atelier-json/src/: io.rs  lib.rs  reader.rs  syntax.rs  writer.rs
atelier-json/src/io/: mod.rs  reader.rs  writer.rs
atelier-json/tests/: json_model_to_ast.rs  json_regression_tests.rs  json_simple_parse_tests.rs  json_success_tests.rs
atelier-json/tests/common/: mod.rs
atelier-json/tests/good/: README.md  aws.api.json  aws.apigateway.json  aws.auth.json  aws.iam.json  aws.protocols.json
atelier-lib/: Cargo.toml  README.md
atelier-lib/src/: action.rs  assembler.rs  format.rs  lib.rs
atelier-lib/src/format/: graphml.rs  mod.rs  plant_uml.rs
atelier-lib/tests/: core_graphml_writer.rs  core_uml_writer.rs
atelier-lib/tests/common/: mod.rs
atelier-openapi/: Cargo.toml  README.md
atelier-openapi/src/: lib.rs
atelier-openapi/tests/: describe_openapi_writer.rs
atelier-openapi/tests/models/: union-test.openapi.json
atelier-query/: Cargo.toml  README.md
atelier-query/src/: evaluate.rs  lib.rs  macros.rs  projection.rs
atelier-rdf/: Cargo.toml  README.md
atelier-rdf/schema/: rdfs.n3  smithy.n3
atelier-rdf/src/: lib.rs  model.rs  reader.rs  urn.rs  vocabulary.rs  writer.rs
atelier-rdf/tests/: rdf_mapping.rs
atelier-select/: Cargo.toml  README.md
atelier-select/src/: lib.rs  select.abnf
atelier-smithy/: Cargo.toml  README.md
atelier-smithy/examples/: smithy_weather.rs  write_weather.rs
atelier-smithy/src/: io.rs  lib.rs  reader.rs  selector.pest  smithy.abnf  smithy.pest  syntax.rs  writer.rs
atelier-smithy/src/io/: mod.rs  read.rs  write.rs
atelier-smithy/src/io/parser/: mod.rs
atelier-smithy/src/parser/: error.rs  mod.rs  selector.rs  smithy.rs
atelier-smithy/tests/: good.rs  selector_tests.rs  smithy_simple_parse_tests.rs  smithy_simple_tests.rs  smithy_success_tests.rs  smithy_write_motd.rs  smithy_write_weather.rs
atelier-smithy/tests/good/: README.md  motd.lines  motd.smithy  prelude-traits.lines  prelude-traits.smithy  smithy-api-mqtt.lines  smithy-api-mqtt.smithy  waiters.lines  waiters.smithy  weather.lines  weather.smithy
atelier-test/: Cargo.toml  README.md
atelier-test/src/: lib.rs  parts.rs
atelier-test/src/examples/: mod.rs  motd.rs  weather.rs
book/: README.md  atelier.css  book.toml
book/img-src/: atelier-book.graffle  smithy-java.monopic  smithy-model.monopic  smithy-rust.monopic
book/src/: SUMMARY.md  smithy_issues.md
book/src/extending/: extending.md  file_io.md  linter.md  transformer.md  validator.md
book/src/introduction/: crates.md  introduction.md  smithy.md
book/src/reference/: java_to_rust.md  line-oriented-writer.md  rdf-example.md  rdf-model.md  rdf-shapes.md  rdf.md  testing.md  (+3 more)
cargo-atelier/: Cargo.toml  README.md
cargo-atelier/src/: actions.rs  command_line.rs  lib.rs  report.rs
cargo-atelier/test-models/: error.smithy  lint-test.smithy  p1.smithy  p2.smithy  validation-test.smithy
extending/: extending.html  file_io.html  linter.html  transformer.html  validator.html
introduction/: crates.html  introduction.html  smithy.html
reference/: java_to_rust.html  line-oriented-writer.html  motd.ttl  rdf-example.html  rdf-model.html  rdf-shapes.html  rdf-traits-values.html  rdf.html  smithy_issues.html  test-crate.html  testing.html
using/: assembly.html  builder_api.html  cargo.html  checking.html  creating.html  io.html  model_api.html  reader.html  visitor.html  writer.html
(+10 files in other folders)
