[package]
name = "atelier_core"
description = "Rust native core model for the AWS Smithy IDL."
version = "0.1.4"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
edition = "2018"
documentation = "https://docs.rs/atelier_core/"
repository = "https://github.com/johnstonskj/rust-atelier.git"
license = "MIT"
readme = "README.md"
publish = true

[package.metadata.docs.rs]
# This sets the default target to `x86_64-unknown-linux-gnu`
# and only builds that target for documentation.
targets = ["x86_64-unknown-linux-gnu"]
all-features = true

[features]
default = ["debug", "uml"]
debug = []
uml = []

[dependencies]
error-chain = "0.12.2"
heck = "0.3.1"
lazy_static = "1.4.0"
regex = "1.3.9"