[package]
name = "atelier_core"
description = "Rust native core model for the AWS Smithy IDL."
version = "0.2.5"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
edition = "2018"
documentation = "https://docs.rs/atelier_core/"
repository = "https://github.com/johnstonskj/rust-atelier.git"
license = "MIT"
readme = "README.md"
publish = true

[package.metadata.docs.rs]
# This sets the default target to `x86_64-unknown-linux-gnu`
# and only builds that target for documentation.
targets = ["x86_64-unknown-linux-gnu"]
all-features = true

[dependencies]
error-chain = "0.12.4"
heck = "0.3.2"
lazy_static = "1.4.0"
paste = "1.0.5"
regex = "1.3.9"

[dev-dependencies]
pretty_assertions = "0.7.1"
