[package]
name = "atelier_core"
description = "Rust native core model for the AWS Smithy IDL."
version = "0.2.18"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
edition = "2018"
documentation = "https://docs.rs/atelier_core/"
repository = "https://github.com/johnstonskj/rust-atelier.git"
license = "MIT"
readme = "README.md"
publish = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true

[dependencies]
error-chain = "0.12"
heck = "0.3"
lazy_static = "1.4"
log = "0.4"
paste = "1.0"
regex = "1.3"

[dev-dependencies]
atelier_test = {version = "0.1", path = "../atelier-test" }
pretty_assertions = "0.7"
