[package]
name = "atelier_json"
description = "Rust native JSON format for the AWS Smithy IDL."
version = "0.1.1"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
edition = "2018"
documentation = "https://docs.rs/atelier_json/"
repository = "https://github.com/johnstonskj/rust-atelier.git"
license = "MIT"
readme = "README.md"
publish = true

[dependencies]
atelier_core = { version = "0.1.1", path = "../atelier-core" }
serde_json = "1.0"