[package]
name = "atelier_json"
description = "Rust native JSON format for the AWS Smithy IDL."
version = "0.2.5"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
edition = "2018"
documentation = "https://docs.rs/atelier_json/"
repository = "https://github.com/johnstonskj/rust-atelier.git"
license = "MIT"
readme = "README.md"
publish = true

[package.metadata.docs.rs]
# This sets the default target to `x86_64-unknown-linux-gnu`
# and only builds that target for documentation.
targets = ["x86_64-unknown-linux-gnu"]
all-features = true

[dependencies]
atelier_core = { version = "~0.2", path = "../atelier-core" }
serde_json = "1.0"

[dev-dependencies]
atelier_test = {version = "0.1", path = "../atelier-test" }
pretty_assertions = "0.7.1"
assert-json-diff = "2.0.1"