[package]
name = "atelier_lib"
description = "Rust native primary client library for the AWS Smithy IDL."
version = "0.1.0"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
edition = "2018"
documentation = "https://docs.rs/atelier_lib/"
repository = "https://github.com/johnstonskj/rust-atelier.git"
license = "MIT"
readme = "README.md"
publish = true

[dependencies]
atelier_core = { version = "0.1.0", path = "../atelier-core" }
atelier_json = { version = "0.1.0", path = "../atelier-json" }
atelier_openapi = { version = "0.1.0", path = "../atelier-openapi" }
atelier_smithy = { version = "0.1.0", path = "../atelier-smithy" }