[package]
name = "atelier_lib"
description = "Rust native primary client library for the AWS Smithy IDL."
version = "0.2.2"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
edition = "2018"
documentation = "https://docs.rs/atelier_lib/"
repository = "https://github.com/johnstonskj/rust-atelier.git"
license = "MIT"
readme = "README.md"
publish = true

[package.metadata.docs.rs]
# This sets the default target to `x86_64-unknown-linux-gnu`
# and only builds that target for documentation.
targets = ["x86_64-unknown-linux-gnu"]
all-features = true

[features]
default = ["describe", "json", "smithy"]
describe = ["atelier_describe"]
json = ["atelier_json"]
openapi = ["atelier_openapi"]
rdf = ["atelier_rdf"]
smithy = ["atelier_smithy"]
graphml = []
uml = []

[dependencies]
atelier_core = { version = "0.2.1", path = "../atelier-core" }
atelier_select = { version = "0.1.0", path = "../atelier-select" }
regex = "1.3.9"

#[feature-dependencies]
atelier_describe = { version = "0.1.0", path = "../atelier-describe", optional = true }
atelier_json = { version = "0.2.1", path = "../atelier-json", optional = true }
atelier_openapi = { version = "0.1.0", path = "../atelier-openapi", optional = true }
atelier_rdf = { version = "0.1.3", path = "../atelier-rdf", optional = true }
atelier_smithy = { version = "0.2.1", path = "../atelier-smithy", optional = true }
