[package]
name = "atelier_openapi"
description = "Rust native OpenAPI format for the AWS Smithy IDL."
version = "0.1.0"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atelier_core = { version = "0.1.0", path = "../atelier-core" }