[package]
name = "atelier_select"
description = "Model and parser for Smithy select expressions."
version = "0.1.0"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
edition = "2018"
documentation = "https://docs.rs/atelier_select/"
repository = "https://github.com/johnstonskj/rust-atelier.git"
license = "MIT"
readme = "README.md"
publish = true

[package.metadata.docs.rs]
# This sets the default target to `x86_64-unknown-linux-gnu`
# and only builds that target for documentation.
targets = ["x86_64-unknown-linux-gnu"]
all-features = true

[dependencies]
atelier_core = { version = "0.1.5", path = "../atelier-core" }