[package]
name = "atelier_smithy"
description = "Rust native Smithy language format for the AWS Smithy IDL."
version = "0.1.0"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
edition = "2018"
documentation = "https://docs.rs/atelier_smithy/"
repository = "https://github.com/johnstonskj/rust-atelier.git"
license = "MIT"
readme = "README.md"
publish = true

[dependencies]
atelier_core = { version = "0.1.0", path = "../atelier-core" }