[package]
name = "atelier_smithy"
description = "Rust native Smithy language format for the AWS Smithy IDL."
version = "0.1.5"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
edition = "2018"
documentation = "https://docs.rs/atelier_smithy/"
repository = "https://github.com/johnstonskj/rust-atelier.git"
license = "MIT"
readme = "README.md"
publish = true

[package.metadata.docs.rs]
# This sets the default target to `x86_64-unknown-linux-gnu`
# and only builds that target for documentation.
targets = ["x86_64-unknown-linux-gnu"]
all-features = true

[features]
default = ["debug"]
debug = ["pest_ascii_tree"]

[dependencies]
atelier_core = { version = "0.1.4", path = "../atelier-core" }
pest = "2.1.3"
pest_derive = "2.1.0"

# [feature-dependencies]
pest_ascii_tree = {version = "0.1.0", optional = true}