[package]
name = "atelier_test"
description = "Test and example models used within the other Atelier crates."
version = "0.1.0"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
edition = "2018"
documentation = "https://docs.rs/atelier_test/"
repository = "https://github.com/johnstonskj/rust-atelier.git"
license = "MIT"
readme = "README.md"
publish = true

[dependencies]
atelier_core = { version = "~0.2", path = "../atelier-core" }
