[package]
name = "cargo_atelier"
description = "Cargo integration for the AWS Smithy IDL."
version = "0.1.1"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
edition = "2018"
documentation = "https://docs.rs/cargo_atelier/"
repository = "https://github.com/johnstonskj/rust-atelier.git"
license = "MIT"
readme = "README.md"
publish = true
default-run = "cargo-atelier"

[package.metadata.docs.rs]
# This sets the default target to `x86_64-unknown-linux-gnu`
# and only builds that target for documentation.
targets = ["x86_64-unknown-linux-gnu"]
all-features = true

[[bin]]
name = "cargo-atelier"
path = "src/bin/main.rs"

[dependencies]
atelier_lib = { version = "0.1.4", path = "../atelier-lib", features = ["json", "openapi", "smithy"]}
structopt = "0.3.14"
