[package]
name = "cargo_atelier"
description = "Cargo integration for the AWS Smithy IDL."
version = "0.2.0"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
edition = "2018"
documentation = "https://docs.rs/cargo_atelier/"
repository = "https://github.com/johnstonskj/rust-atelier.git"
license = "MIT"
readme = "README.md"
publish = true
default-run = "cargo-atelier"

[package.metadata.docs.rs]
# This sets the default target to `x86_64-unknown-linux-gnu`
# and only builds that target for documentation.
targets = ["x86_64-unknown-linux-gnu"]
all-features = true

[[bin]]
name = "cargo-atelier"
path = "src/bin/main.rs"

[features]
default = ["color"]
color = ["colored"]

[dependencies]
atelier_lib = { version = "0.2.0", path = "../atelier-lib", features = ["json", "openapi", "smithy", "uml"]}
structopt = "0.3.14"

#[feature-dependencies]
colored = { version = "1.9.3", optional = true }
